force-app/main/default/objects/Account/fields/AccountOverRide__c.field-meta.xml
<CustomField>
    <fullName>AccountOverRide__c</fullName>
    <label>Pre-bill Override %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>