force-app/main/default/objects/Account/fields/AllowUnknownAssignments__c.field-meta.xml
<CustomField>
    <fullName>AllowUnknownAssignments__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Allow Unknown Assignments</label>
    <type>Checkbox</type>
</CustomField>