force-app/main/default/objects/Account/fields/CanRequestProjects__c.field-meta.xml
<CustomField>
    <fullName>CanRequestProjects__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Request Projects</label>
    <type>Checkbox</type>
</CustomField>