force-app/main/default/objects/Account/fields/CMKOneHubAccountID__c.field-meta.xml
<CustomField>
    <fullName>CMKOneHubAccountID__c</fullName>
    <label>Lawson Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>