force-app/main/default/objects/Account/fields/OneHubAccountType__c.field-meta.xml
<CustomField>
    <fullName>OneHubAccountType__c</fullName>
    <label>OneHubAccountType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Execution Company</fullName>
            </value>
            <value>
                <fullName>Retailer</fullName>
            </value>
            <value>
                <fullName>Manufacturer</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Retail Category</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>3PL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>