force-app/main/default/objects/Account/fields/ProjectBuilder__c.field-meta.xml
<CustomField>
    <fullName>ProjectBuilder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Builder</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>