force-app/main/default/objects/Account/fields/retailercalendar__c.field-meta.xml
<CustomField>
    <fullName>retailercalendar__c</fullName>
    <label>retailer  calendar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>