force-app/main/default/objects/Account/fields/ThirdPartyAgencyPrimaryContact__c.field-meta.xml
<CustomField>
    <fullName>ThirdPartyAgencyPrimaryContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>3PL Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>