force-app/main/default/objects/Account/fields/ThirdPartyApprover__c.field-meta.xml
<CustomField>
    <fullName>ThirdPartyApprover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Third Party Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>